# to-directory

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  LICENSE  Makefile  README.md
cli-tests/: .gitignore  Cargo.toml
cli-tests/src/: lib.rs  main.rs
examples/: failure.rs  integration-tests.rs  main.rs
scripts/: common.sh  coverage.sh  lint.sh  travis.sh
src/: cli.rs  cli.yml  database.rs  dir.rs  error.rs  errors.rs  lib.rs  logger.rs  main.rs  store.rs  to.sh  types.rs
tests/: cli_test.rs  dir_test.rs  init_test.rs  integration.bats  integration_test.rs  lib.rs  to_test.rs
tests/cli/: mod.rs
tests/integration/: help.bats  help.json  init.json  setup.bash
tools/: coveralls.sh  install-cargo-kcov.sh  install-kcov.sh
