[package]
name = "to-directory"
version = "0.1.0"
authors = ["Jason Campbell <jason@artifact.sh>"]
description = "EXPERIMENTAL - A CLI utility for bookmarking directories (with tab completion)."
homepage = "https://github.com/jxson/to-directory"
readme = "README.md"
keywords = [ "cd", "to" ]
license = "ISC"

[[bin]]
name = "to-directory"

# The library is only used for tests.
[lib]
name = "to"
path = "src/lib.rs"

[dependencies]
bincode = "0.8"
clap = "2.20.0"
error-chain = "0.11.0"
prettytable-rs = "^0.6"
serde = "1.0.10"
serde_derive = "1.0.10"
loggerv = "0.6"
log = "0.3"
time = "0.1.36"

[dev-dependencies]
assert_cli = "0.5.4"
glob = "0.2.11"
tap-rust = { git = "https://github.com/Cigna/TAP-Rust", rev = "939a7ab" }
tempdir = "0.3.5"
serde_json = "1.0.9"

[[example]]
name = "integration-tests"
