[package]
name = "to-directory"
version = "0.1.0"
authors = ["Jason Campbell <jason@artifact.sh>"]
description = "EXPERIMENTAL - A CLI utility for bookmarking directories (with tab completion)."
homepage = "https://github.com/jxson/to-directory"
readme = "README.md"
keywords = [ "cd", "to" ]
license = "ISC"

# The library is only used for tests.
[lib]
name = "to"
path = "src/lib.rs"

[dependencies]
bincode = "0.8"
clap = "2.20.0"
dirs = "1.0.4"
error-chain = "0.11.0"
failure = "0.1.3"
failure_derive = "0.1.3"
log = "0.3"
loggerv = "0.6"
mkdirp = "0.1.0"
prettytable-rs = "^0.6"
serde = "1.0.10"
serde_derive = "1.0.10"
time = "0.1.36"

[dev-dependencies]
tempdir = "0.3.5"
