[package]
name = "to-directory"
version = "0.1.0"
authors = ["Jason Campbell <jason@artifact.sh>"]
description = "EXPERIMENTAL - A CLI utility for bookmarking directories (with tab completion)."
homepage = "https://github.com/jxson/to-directory"
readme = "README.md"
keywords = [ "cd", "to" ]
license = "ISC"
edition = "2021"

# The library is only used for tests.
[lib]
name = "to"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
clap = "2.20.0"
dirs = "4.0.0"
error-chain = "0.12.4"
failure = "0.1.8"
failure_derive = "0.1.8"
log = "0.4.17"
loggerv = "0.7.2"
mkdirp = "1.0.0"
prettytable-rs = "0.8.0"
serde = "1.0.137"
serde_derive = "1.0.137"
time = "0.1.36"

[dev-dependencies]
tempdir = "0.3.7"
