[package]
name = "cli-tests"
version = "0.1.0"
authors = ["Jason Campbell <jasoncampbell@google.com>"]
license = "ISC"

[[bin]]
name = "cli-tests"

[lib]
name = "tape"
path = "src/lib.rs"

[dependencies]
assert_cli = "*"
failure = "*"
glob = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tempdir = "*"
